# fortc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
api/: CMakeLists.txt  apiinput.h  apiinput_m.f90
errorapi/: CMakeLists.txt  apierror.cpp  apierror.h  error.h
fortranlib/: CMakeLists.txt  error_m.f90  fork_m.F90  input_m.f90
memoryprogram/: CMakeLists.txt  main.cpp
testprogram/: CMakeLists.txt  main.cpp
